<resources>
    <string name="app_name">Tip Time</string>
    <string name="como_foi_o_servi_o">Como foi o serviço?</string>
    <string name="timo_20">Ótimo (20%)</string>
    <string name="bom_18">Bom (18%)</string>
    <string name="regular_15">Regular (15%)</string>
    <string name="calcular">Calcular</string>
    <string name="valor_da_gorjeta">Valor da Gorjeta %s</string>
    <string name="custo_de_servi_o">Custo de serviço</string>
    <string name="arredondar">Arredondar?</string>
</resources>